trunk/Archive2/11/2c19739e9f712e/output
In file included from /usr/include/c++/4.8/memory:81:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/unique_ptr.h: In instantiation of 'std::unique_ptr<_Tp, _Dp>& std::unique_ptr<_Tp, _Dp>::operator=(std::unique_ptr<_Tp, _Dp>&&) [with _Tp = int; _Dp = deleter]':
main.cpp:13:12:   required from here
/usr/include/c++/4.8/bits/unique_ptr.h:193:16: error: use of deleted function 'deleter& deleter::operator=(deleter&&)'
  get_deleter() = std::forward<deleter_type>(__u.get_deleter());
                ^
main.cpp:4:8: note: 'deleter& deleter::operator=(deleter&&)' is implicitly deleted because the default definition would be ill-formed:
 struct deleter {
        ^
main.cpp:4:8: error: non-static reference member 'const char& deleter::c', can't use default assignment operator
